deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: python
  namespace: python
  labels:
    app: python
    app.kubernetes.io/component: python
    app.kubernetes.io/instance: python
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: python
  template:
    metadata:
      labels:
        deployment: python
    spec:
      containers:
        - name: python
          image: >-
            image-registry.openshift-image-registry.svc:5000/python/python:latest
          ports:
            - containerPort: 5000
              protocol: TCP
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
