service.yaml
kind: Service
apiVersion: v1
metadata:
  name: python
  namespace: python
  labels:
    app: python
    app.kubernetes.io/component: python
    app.kubernetes.io/instance: python
spec:
  clusterIP: 172.30.88.69
  ipFamilies:
    - IPv4
  ports:
    - name: 5000-tcp
      protocol: TCP
      port: 5000
      targetPort: 5000
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  clusterIPs:
    - 172.30.88.69
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    deployment: python
status:
  loadBalancer: {}
